--- a/package.json
+++ b/package.json
@@ -5,14 +5,9 @@
   "author": "Andre Liem <andre.liem@gmail.com>",
   "private": true,
   "dependencies": {
-    "highlight.js": "^9.12.0",
-    "http-vue-loader": "^1.3.1",
+    "html-loader": "^0.4.5",
     "markdown-loader": "^2.0.0",
-    "marked": "^0.3.6",
-    "nuxt": "latest",
-    "vue-highlightjs": "^1.3.3",
-    "vue-markdown": "^2.1.3",
-    "vue-style-loader": "^3.0.1"
+    "nuxt": "latest"
   },
   "scripts": {
     "dev": "nuxt",
@@ -30,8 +25,13 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
-    "html-loader": "^0.4.5",
+    "highlight.js": "^9.12.0",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4"
+    "less-loader": "^4.0.4",
+    "markdown-loader": "^2.0.0",
+    "marked": "^0.3.6",
+    "vue-highlightjs": "^1.3.3",
+    "vue-markdown": "^2.1.3",
+    "vue-style-loader": "^3.0.1"
   }
 }
