--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "html-loader": "^0.4.5",
     "markdown-loader": "^2.0.0",
-    "nuxt": "latest"
+    "nuxt": "latest",
+    "vue-disqus": "^2.0.3"
   },
   "scripts": {
     "dev": "nuxt",
