--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "highlight.js": "^9.12.0",
     "html-loader": "^0.4.5",
-    "markdown-loader": "^2.0.0",
     "nuxt": "latest",
     "vue-disqus": "^2.0.3"
   },
@@ -20,6 +19,10 @@
     "precommit": "npm run lint"
   },
   "devDependencies": {
+    "@nuxtjs/bootstrap-vue": "^1.0.4",
+    "@nuxtjs/font-awesome": "^1.0.1",
+    "@nuxtjs/google-analytics": "^0.2.0",
+    "@nuxtjs/markdownit": "0.0.2",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
@@ -29,10 +32,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
-    "markdown-loader": "^2.0.0",
     "marked": "^0.3.6",
     "vue-highlightjs": "^1.3.3",
-    "vue-markdown": "^2.1.3",
     "vue-style-loader": "^3.0.1"
   }
 }
