--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "Andre Liem <andre.liem@gmail.com>",
   "private": true,
   "dependencies": {
+    "@nuxtjs/markdownit": "^1.1.2",
     "highlight.js": "^9.12.0",
     "html-loader": "^0.4.5",
-    "nuxt": "latest",
+    "nuxt": "^1.0.0-rc9",
     "vue-disqus": "^2.0.3"
   },
   "scripts": {
@@ -19,19 +20,18 @@
     "precommit": "npm run lint"
   },
   "devDependencies": {
-    "@nuxtjs/bootstrap-vue": "^1.0.4",
-    "@nuxtjs/font-awesome": "^1.0.1",
+    "@nuxtjs/bootstrap-vue": "^1.1.0",
+    "@nuxtjs/font-awesome": "^1.0.2",
     "@nuxtjs/google-analytics": "^0.2.0",
-    "@nuxtjs/markdownit": "0.0.2",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
-    "eslint-loader": "^1.6.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4",
+    "less-loader": "^4.0.5",
     "marked": "^0.3.6",
     "vue-highlightjs": "^1.3.3",
     "vue-style-loader": "^3.0.1"
